Merged revisions 70157 via svnmerge from svn+ssh://pythondev@svn.python.org/python/branches/py3k

........
  r70157 | hirokazu.yamamoto | 2009-03-04 10:52:10 +0900 | 1 line

  Issue #5273: Fixed import failure on unicode path. (especially on windows)
........